microservices-demo/kustomize/overlays/recommendationservice/recommendationservice-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice-v2
  labels:
    app: recommendationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendationservice
      version: v2
  template:
    metadata:
      labels:
        app: recommendationservice
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: recommendationservice
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: server
        image: jads7427/recommendationservice:v2
        ports:
        - containerPort: 8080
        readinessProbe:
          grpc:
            port: 8080
          periodSeconds: 5
        livenessProbe:
          grpc:
            port: 8080
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 220Mi
          limits:
            cpu: 200m
            memory: 450Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          privileged: false
          capabilities:
            drop:
            - ALL
