microservices-demo/kustomize/overlays/recommendationservice/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendationservice
spec:
  hosts:
  - recommendationservice
  http:
  - route:
    - destination:
        host: recommendationservice
        subset: v1
      weight: 75
    - destination:
        host: recommendationservice
        subset: v2
      weight: 25
